objects/Quote.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hubert_Info__c</fullName>
        <formula>&apos;Hubert Palan&apos; + BR() + &apos;CEO&apos; + BR() + &apos;(415) 578-0808&apos;</formula>
        <label>Hubert Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubert_Email__c</fullName>
        <defaultValue>&apos;hubert@productboard.com&apos;</defaultValue>
        <label>Hubert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <formula>TEXT(Contract_Start_Date__c) + &apos; - &apos; +  TEXT(Contract_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <formula>Contact.FirstName + &apos; &apos; + Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Salutation__c</fullName>
        <formula>&apos;Dear &apos; + Contact.FirstName + &apos;,&apos; + BR() + &apos;We are happy to offer you productboard subscription as follows:&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Title__c</fullName>
        <formula>Contact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Quote_Number__c</fullName>
        <formula>&apos;Q&apos; + TEXT(YEAR(TODAY()))+ TEXT(MONTH(TODAY())) + TEXT(DAY(TODAY())) +  QuoteNumber</formula>
        <label>Full Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Huberts_signature__c</fullName>
        <formula>BR() + BR() + BR() + BR() + &apos;Hubert Palan&apos;+ BR() + &apos;CEO&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Huberts signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productboard_Name__c</fullName>
        <formula>&apos;ProductBoard, Inc.&apos; + BR() + &apos;392 Staten Ave&apos; + BR() + &apos;Oakland, CA 94610&apos; + BR() + &apos;USA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productboard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signature__c</fullName>
        <formula>BR() + BR() + BR() + BR() + &apos;Name: &apos; + Contact.FirstName + &apos; &apos; + Contact.LastName + BR() +&apos;Date: &apos; + BR()+ &apos;Title: &apos; + Contact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Terms_form__c</fullName>
        <formula>&quot;Additional Terms: You acknowledge having read and further agree to the Terms and Conditions found at https://legal.productboard.com/terms as of the date of your signature below, including any addenda referenced therein or attached hereto (the “Terms”), which Terms are hereby incorporated by reference. This Quote (“Quote”) and the Terms are collectively referred to as the “Agreement.” The Agreement represents the parties’ entire agreement and supersedes all prior or contemporaneous agreements, understandings and representations, written or oral, between the parties, with respect to services to be provided by productboard, Inc. You agree to this Agreement by signing this Quote, and if you are entering into this Agreement on behalf of a company or other legal entity, you represent that you have the authority to bind the company or entity to which this Quote is addressed above to the terms of the Agreement. In the event of any conflict between this Quote and the Terms, this Quote shall prevail. The Agreement is effective upon the date Customer executes this Quote.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Information__c</fullName>
        <formula>Subscriber_Name__c + BR() + Subscriber_Title__c + BR() + Contact.Phone + BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_additional_terms__c</fullName>
        <formula>&apos;Additional Terms: The​ ​Terms​ ​and​ ​Conditions​ ​attached​ ​to​ ​this​ ​Form,​ ​including​ ​any​ ​addenda​ ​referenced​ ​therein​ ​or​ ​attached​ ​hereto​ ​(the​ ​“Terms”)​ ​are  hereby​ ​incorporated​ ​by​ ​reference.​ ​This​ ​Form​ ​(referred​ ​to​ ​also​ ​as​ ​a​ ​“Quote”)​ ​and​ ​the​ ​Terms​ ​are​ ​collectively​ ​referred​ ​to​ ​as​ ​the  “Agreement.”​ ​The​ ​Agreement​ ​represents​ ​the​ ​parties’​ ​entire​ ​agreement​ ​and​ ​supersedes​ ​all​ ​prior​ ​or​ ​contemporaneous​ ​agreements,  understandings​ ​and​ ​representations,​ ​written​ ​or​ ​oral,​ ​between​ ​the​ ​parties,​ ​with​ ​respect​ ​to​ ​services​ ​to​ ​be​ ​provided​ ​by​ ​productboard,  Inc.​ ​You​ ​agree​ ​to​ ​this​ ​Agreement​ ​by​ ​signing​ ​this​ ​Quote,​ ​and​ ​if​ ​you​ ​are​ ​entering​ ​into​ ​this​ ​Agreement​ ​on​ ​behalf​ ​of​ ​a​ ​company​ ​or  other​ ​legal​ ​entity,​ ​you​ ​represent​ ​that​ ​you​ ​have​ ​the​ ​authority​ ​to​ ​bind​ ​the​ ​company​ ​or​ ​entity​ ​to​ ​which​ ​this​ ​Quote​ ​is​ ​addressed​ ​above  to​ ​the​ ​terms​ ​of​ ​the​ ​Agreement.​ ​In​ ​the​ ​event​ ​of​ ​any​ ​conflict​ ​between​ ​this​ ​Quote​ ​and​ ​the​ ​Terms,​ ​this​ ​Quote​ ​shall​ ​prevail.​ ​The  Agreement​ ​is​ ​effective​ ​upon​ ​the​ ​date​ ​Customer​ ​executes​ ​this​ ​Quote.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom additional terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Company_Name__c</fullName>
        <formula>Opportunity.Account.Name + BR() + Opportunity.Account.BillingStreet + BR() + Opportunity.Account.BillingCity + &apos;, &apos; + Opportunity.Account.BillingPostalCode + BR() + Opportunity.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Billing_Street__c</fullName>
        <label>Subscriber Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Billing_Country__c</fullName>
        <label>Subscriber Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Company_on_Template__c</fullName>
        <formula>Subscriber_Billing_Company_Name__c + BR() +  Subscriber_Billing_Street__c + BR() +  Subscriber_Billing_City_and_Postal_Code__c  + BR() +  Subscriber_Billing_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Company on Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Billing_Company_Name__c</fullName>
        <label>Subscriber Billing Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Billing_City_and_Postal_Code__c</fullName>
        <label>Subscriber Billing City &amp; Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Custom</fullName>
        <active>true</active>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standart</fullName>
        <active>true</active>
        <label>Standart</label>
    </recordTypes>
    <validationRules>
        <fullName>Quote_Project_Filled_Up</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status, &quot;Accepted&quot;) &amp;&amp; ISBLANK(Project__c)</errorConditionFormula>
        <errorMessage>You have to choose a project.</errorMessage>
    </validationRules>
</CustomObject>